// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "medium", compact: false, open: false, theme: light and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid #D8D8DB !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 20px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.25s);
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: hidden;
  animation: none;
  transform: translate3d(0,0,0);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: false, open: true, theme: light and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid #D8D8DB !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 20px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,0.25s);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: false, theme: dark and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #FBFCFF;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.25s);
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: hidden;
  animation: none;
  transform: translate3d(0,0,0);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: false, theme: dark and sticky: true 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
  position: sticky;
  top: var(--p-accordion-position-sticky-top, 0);
  z-index: 1;
  background-color: #0E0E12;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #FBFCFF;
  display: grid;
  position: relative;
  z-index: 0;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.25s);
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: hidden;
  animation: none;
  transform: translate3d(0,0,0);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: false, theme: light and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.25s);
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: hidden;
  animation: none;
  transform: translate3d(0,0,0);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: false, theme: light and sticky: true 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
  position: sticky;
  top: var(--p-accordion-position-sticky-top, 0);
  z-index: 1;
  background-color: #FFF;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  position: relative;
  z-index: 0;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.25s);
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: hidden;
  animation: none;
  transform: translate3d(0,0,0);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: true, theme: light and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 8px;
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,0.25s);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: false, theme: light and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid #D8D8DB !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.25s);
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: hidden;
  animation: none;
  transform: translate3d(0,0,0);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: true, theme: dark and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid #404044 !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #FBFCFF;
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,0.25s);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: true, theme: light and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid #D8D8DB !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,0.25s);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: true, open: false, theme: light and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.25s);
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: hidden;
  animation: none;
  transform: translate3d(0,0,0);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: true, open: true, theme: light and sticky: false 1`] = `
":host {
  display: block;
  transform: translate3d(0,0,0) !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 8px;
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,0.25s);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, compact: false, open: true, theme: dark and sticky: false 1`] = `
":host {
  display: block;
  border-bottom: 1px solid #404044 !important;
  color-scheme: light dark !important;
}
:host(:only-of-type) {
  border-bottom: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  text-decoration: none;
  border: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 0;
}
button:focus-visible::before {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(min-width:480px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media(min-width:760px) {
  button {
    font-size: 1rem;
    padding: 15px 0;
  }
}

@media(min-width:1000px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media(min-width:1300px) {
  button {
    font-size: 1rem;
    padding: 15px 0;
  }
}

@media(min-width:1760px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #FBFCFF;
  display: grid;
  grid-template-rows: 1fr;
  visibility: inherit;
  transition: grid-template-rows var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  padding: 4px;
  margin: -4px;
  overflow: visible;
  animation: keyframes-overflow var(--p-transition-duration,0.25s);
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;
